--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+# Postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
+
+# Validation
+FULL_NAME_MIN_LENGTH=3
+FULL_NAME_MAX_LENGTH=50
+EMAIL_MAX_LENGTH=50
+NOTE_TITLE_MAX_LENGTH=50
+NOTE_CONTENT_MAX_LENGTH=1000
+BOX_NAME_MAX_LENGTH=50
