--- a/backend/models/sqlc.yaml
+++ b/backend/models/sqlc.yaml
@@ -6,5 +6,6 @@ sql:
     gen:
       go:
         package: "model"
+        emit_json_tags: true
         out: "generated_model"
         sql_package: "pgx/v5"
