--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/zbox:latest
+          tags: ghcr.io/zbox-notes/zbox-backend:latest
