--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -22,4 +22,6 @@ jobs:
         run: go mod tidy
 
       - name: Run tests
-        run: go test ./... -v
+        run: |
+          cd backend
+          go test ./backend/... -v
