--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./backend/models/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./models/schema.sql:/docker-entrypoint-initdb.d/schema.sql
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}" ]
       interval: 5s
