--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -19,7 +19,9 @@ jobs:
           go-version: '1.24'  # Specify the Go version you need
 
       - name: Install dependencies
-        run: go mod tidy
+        run: |
+          cd backend
+          go mod tidy
 
       - name: Run tests
         run: |
