--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,16 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.PAT }}
+          
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '1.24'  # Update to Go 1.24
+
+      - name: Install dependencies
+        run: |
+          cd backend
+          go mod tidy
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
